fixed overlapping css issues

--- a/public/css/dropdown.css
+++ b/public/css/dropdown.css
@@ -15,7 +15,7 @@
   }
   
   /*Styling Selectbox*/
-  .dropdown {
+  .shoedropdown {
     width: 300px;
     display: inline-block;
     background-color: #fff;
@@ -28,12 +28,12 @@
     height: 100%;
     text-align: left
   }
-  .dropdown .select {
+  .shoedropdown .select {
       cursor: pointer;
       display: block;
       padding: 10px
   }
-  .dropdown .select > i {
+  .shoedropdown .select > i {
       font-size: 13px;
       color: #888;
       cursor: pointer;
@@ -41,22 +41,22 @@
       float: right;
       line-height: 20px
   }
-  .dropdown:hover {
+  .shoedropdown:hover {
       box-shadow: 0 0 4px rgb(204, 204, 204)
   }
-  .dropdown:active {
+  .shoedropdown:active {
       background-color: #f8f8f8
   }
-  .dropdown.active:hover,
-  .dropdown.active {
+  .shoedropdown.active:hover,
+  .shoedropdown.active {
       box-shadow: 0 0 4px rgb(204, 204, 204);
       border-radius: 5px 5px 0 0;
       background-color: #f8f8f8
   }
-  .dropdown.active .select > i {
+  .shoedropdown.active .select > i {
       transform: rotate(-90deg)
   }
-  .dropdown .dropdown-menu {
+  .shoedropdown .shoedropdown-menu {
       position: absolute;
       background-color: #fff;
       width: 100%;
@@ -70,18 +70,18 @@
       overflow-y: auto;
       z-index: 9
   }
-  .dropdown .dropdown-menu li {
+  .shoedropdown .shoedropdown-menu li {
       padding: 10px;
       transition: all .2s ease-in-out;
       cursor: pointer
   } 
-  .dropdown .dropdown-menu {
+  .shoedropdown .shoedropdown-menu {
       padding: 0;
       list-style: none
   }
-  .dropdown .dropdown-menu li:hover {
+  .shoedropdown .shoedropdown-menu li:hover {
       background-color: #f2f2f2
   }
-  .dropdown .dropdown-menu li:active {
+  .shoedropdown .shoedropdown-menu li:active {
       background-color: #e2e2e2
   }
